--- a/emacs/config.org
+++ b/emacs/config.org
@@ -101,6 +101,7 @@ Here's a TOC (because github can't render it), curtosy =org-make-toc=.
   - [[#polymode][Polymode]]
   - [[#yaml][YAML]]
   - [[#eglot][eglot]]
+  - [[#lsp][LSP]]
   - [[#treesitter][treesitter]]
   - [[#r-or-ess][R (or ess)]]
   - [[#julia][Julia]]
@@ -127,9 +128,13 @@ Here's a TOC (because github can't render it), curtosy =org-make-toc=.
     - [[#org-ref][org-ref]]
     - [[#org-contrib][org-contrib]]
     - [[#org-present][org-present]]
+    - [[#org-noter][org-noter]]
+    - [[#helm-org-named][helm-org-named]]
+    - [[#org-roam][org-roam]]
+    - [[#anki][Anki]]
   - [[#personal-customization][Personal customization]]
     - [[#make-c-c-c-v-c-n-and-c-c-c-v-c-p-handle-inline-call][Make C-c C-v C-n and C-c C-v C-p handle inline CALL]]
-    - [[#display-inline-images-in-subtree-only][Display inline images in subtree only]]
+    - [[#display-inline-images-other-than-just-the-entire-buffer][Display inline images other than just the entire buffer]]
     - [[#command-for-inserting-src-block-below][Command for inserting src block below]]
     - [[#make-include--useful-outside-of-exports][Make #+INCLUDE: ... useful outside of exports]]
     - [[#result][Result]]
@@ -152,10 +157,14 @@ Here's a TOC (because github can't render it), curtosy =org-make-toc=.
   - [[#doom-themesel][doom-themes.el]]
   - [[#doom-modelineel][doom-modeline.el]]
   - [[#custom-hooks][Custom hooks]]
+  - [[#night-and-day-themes][Night and day themes]]
+    - [[#darkman]]
   - [[#result][Result]]
 - [[#interacting-with-the-outside-of-emacs][Interacting with the outside of Emacs]]
   - [[#emacs-anywhere][Emacs anywhere]]
   - [[#org-protocolel-and-org-capture-extension-for-firefox--chrome][org-protocol.el and  (for Firefox & Chrome)]]
+- [[#additional-neateties][Additional neateties]]
+  - [[#name-of-emacs-window][Name of Emacs window]]
 - [[#result][Result]]
   - [[#full-config][Full config]]
   - [[#minimalist-config][Minimalist config]]
