--- a/emacs/config.org
+++ b/emacs/config.org
@@ -1469,6 +1469,31 @@ This is different from the =jupyter=, since this actually allows us to work with
   (setq graphviz-dot-indent-width 2))
 #+end_src
 
+** Rust
+#+name: programming--rust
+#+begin_src emacs-lisp
+;; Source/inspiration: https://robert.kra.hn/posts/rust-emacs-setup/
+(use-package rustic
+  :ensure
+  :bind (:map rustic-mode-map
+              ("M-j" . lsp-ui-imenu)
+              ("M-?" . lsp-find-references)
+              ("C-c C-c l" . flycheck-list-errors)
+              ("C-c C-c a" . lsp-execute-code-action)
+              ("C-c C-c r" . lsp-rename)
+              ("C-c C-c q" . lsp-workspace-restart)
+              ("C-c C-c Q" . lsp-workspace-shutdown)
+              ("C-c C-c s" . lsp-rust-analyzer-status))
+  :config
+  ;; uncomment for less flashiness
+  ;; (setq lsp-eldoc-hook nil)
+  ;; (setq lsp-enable-symbol-highlighting nil)
+  ;; (setq lsp-signature-auto-activate nil)
+
+  ;; comment to disable rustfmt on save
+  (setq rustic-format-on-save t))
+#+end_src
+
 ** Result
 #+name: programming
 #+begin_src emacs-lisp
@@ -1487,6 +1512,7 @@ This is different from the =jupyter=, since this actually allows us to work with
 <<programming--jupyter>>
 <<programming--ein>>
 <<programming--graphviz-dot>>
+<<programming--rust>>
 #+end_src
 * Org
 
