disable undo-tree-auto-save-history because of perf issues

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -959,6 +959,8 @@ The default tab-bar name uses the buffer name."
 (use-package undo-tree
   :straight (undo-tree :build (:not native-compile))
   :diminish undo-tree-mode
+  :custom
+  (undo-tree-auto-save-history nil)
   :init (global-undo-tree-mode))
 #+end_src
 
